// Vitest Snapshot v1

exports[`Textarea > Textarea autosizeVue demo works fine 1`] = `
<div
  class="t-textarea"
>
  <!--v-if-->
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner"
      maxlength="-1"
      name="标签文字"
      placeholder="请输入文字"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Textarea > Textarea baseVue demo works fine 1`] = `
<div
  class="t-textarea textarea-example"
  data-v-dc028088=""
>
  <!--v-if-->
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner"
      maxlength="-1"
      name=""
      placeholder="请输入文字"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Textarea > Textarea cardVue demo works fine 1`] = `
<div
  class="textarea-example"
  data-v-0fc6070a=""
>
  <div
    class="t-textarea textarea"
    data-v-0fc6070a=""
  >
    <div
      class="t-textarea__label"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        class="t-textarea__wrapper-inner"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
      />
      <div
        class="t-textarea__indicator"
      >
        0/500
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea customVue demo works fine 1`] = `
<div
  class="textarea-example"
  data-v-1eb98b9c=""
>
  <text
    class="textarea-example__label"
    data-v-1eb98b9c=""
  >
    标签文字
  </text>
  <div
    class="t-textarea t-textarea--border textarea"
    data-v-1eb98b9c=""
  >
    <!--v-if-->
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        class="t-textarea__wrapper-inner"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
      />
      <div
        class="t-textarea__indicator"
      >
        0/100
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea disabledVue demo works fine 1`] = `
<div
  class="t-textarea textarea-example"
  data-v-43d18467=""
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-is-disabled"
      disabled=""
      maxlength="-1"
      name=""
      placeholder="请输入文字"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Textarea > Textarea labelVue demo works fine 1`] = `
<div
  class="t-textarea"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner"
      maxlength="-1"
      name="标签文字"
      placeholder="请输入文字"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Textarea > Textarea maxcharacterVue demo works fine 1`] = `
<div
  class="t-textarea"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner"
      maxlength="-1"
      name="标签文字"
      placeholder="请输入文字"
    />
    <div
      class="t-textarea__indicator"
    >
      0/20
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea maxlengthVue demo works fine 1`] = `
<div
  class="t-textarea"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner"
      maxlength="-1"
      name="标签文字"
      placeholder="请输入文字"
    />
    <div
      class="t-textarea__indicator"
    >
      0/20
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Textarea 多行文本框
  </h1>
  <p
    class="summary"
  >
    用于多行文本的输入
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        基础多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea textarea-example"
        data-v-dc028088=""
      >
        <!--v-if-->
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带标题多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner"
            maxlength="-1"
            name="标签文字"
            placeholder="请输入文字"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自动增高多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea"
      >
        <!--v-if-->
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner"
            maxlength="-1"
            name="标签文字"
            placeholder="请输入文字"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        设置字符数限制
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner"
            maxlength="-1"
            name="标签文字"
            placeholder="请输入文字"
          />
          <div
            class="t-textarea__indicator"
          >
            0/20
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner"
            maxlength="-1"
            name="标签文字"
            placeholder="请输入文字"
          />
          <div
            class="t-textarea__indicator"
          >
            0/20
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea textarea-example"
        data-v-43d18467=""
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-is-disabled"
            disabled=""
            maxlength="-1"
            name=""
            placeholder="请输入文字"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        卡片样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="textarea-example"
        data-v-0fc6070a=""
      >
        <div
          class="t-textarea textarea"
          data-v-0fc6070a=""
        >
          <div
            class="t-textarea__label"
          >
            标签文字
          </div>
          <div
            class="t-textarea__wrapper"
          >
            <textarea
              class="t-textarea__wrapper-inner"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
            />
            <div
              class="t-textarea__indicator"
            >
              0/500
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="textarea-example"
        data-v-1eb98b9c=""
      >
        <text
          class="textarea-example__label"
          data-v-1eb98b9c=""
        >
          标签文字
        </text>
        <div
          class="t-textarea t-textarea--border textarea"
          data-v-1eb98b9c=""
        >
          <!--v-if-->
          <div
            class="t-textarea__wrapper"
          >
            <textarea
              class="t-textarea__wrapper-inner"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
            />
            <div
              class="t-textarea__indicator"
            >
              0/100
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
